$Id: History,v 1.102 2002-07-03 15:28:08 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

June 21, 2002 G.Cosmo (global-V04-01-00)
- G4Allocator.hh: changed definition of page size to become data-member of
  G4Allocator. fPageSize is now computed according to the size of the object
  to be allocated. The default size is 1024 bytes for objects whose size is
  less than 512 bytes, 10 times the size of the object otherwise.
  To be benchmarked before put it in production.

May 30, 2002 G.Cosmo (global-V04-00-08)
- G4DataVector.cc: initialise to zero values in collection for contructor
  taking capacity.

May 24, 2002 G.Cosmo (global-V04-00-07)
- Introduced temporary modifications for porting on gcc-3.1 compiler:
  o g4std/strstream: deactivate gcc-3.1 specific __DEPRECATED flag.
  o G4strstreambuf.icc: correct patch for overflow() to be specific only to
    gcc-3.0.X versions of the compiler. Behavior now fixed in gcc-3.1.
  o G4llocator.hh: use pointer to member data to compute offset in FreeSingle().
    for gcc-3.1 compiler. gcc-3.1 complains and does not correctly handle offsets
    computed from non-POD types. Pointers to member data should be used instead.